# crust

./: .gitignore  Cargo.toml  Dockerfile  README.md
benchmark/: benchmark.sh  graph.ipynb
exp/: graph.ipynb  run_experiment.sh
exp/autoscaler/: README.md  graph.ipynb
exp/replica/: README.md  graph.ipynb  run_experiment.sh
src/: burn.rs  healthy.rs  main.rs  metrics.rs
yaml/: crust-deployment.yaml  crust-hpa.yaml  crust-namespace.yaml  crust-service.yaml  crust.yaml
