[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
